created model for aircraft data, populated database with some data, created detail page

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-    background-color: rgb(98, 170, 221);
+    background-color: lightgrey;
   }
   
   main {
