--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,4 +1,4 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Aircraft Collector Home</h1>
+    <h1 class="">Aircraft Collector Home</h1>
 {% endblock %}
