--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -5,11 +5,17 @@ body {
     background-color: lightgrey;
   }
   
-  main {
-    flex: 1 0 auto;
-  }
-  
-  footer.page-footer {
-    padding-top: 0;
-    text-align: right;
-  }
+main {
+  flex: 1 0 auto;
+}
+
+footer.page-footer {
+  padding-top: 0;
+  text-align: right;
+}
+
+
+label {
+  color: #000 !important;
+  font-size: 1rem;
+}
