created airbase model and enabled full CRUD, assossiates aircraft and airbases

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -19,3 +19,9 @@ label {
   color: #000 !important;
   font-size: 1rem;
 }
+
+.highlight {
+  color: aqua;
+  font-size: 1.2rem !important;
+  font-weight: 700;
+}
