--- a/main_app/templates/main_app/airbase_form.html
+++ b/main_app/templates/main_app/airbase_form.html
@@ -5,7 +5,7 @@
     {% if object %}
         <h1>Update <span class="light-blue-text">{{object.make}}</span></h1>
     {% else %}
-        <h1>Register a New Aircraft</h1>
+        <h1>Register a New Airbase</h1>
     {% endif %}
 
   <!-- Leaving the action empty makes the form post to the same url used to display it -->
