--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
+
     <h1 class="">Aircraft Collector Home</h1>
+
 {% endblock %}
