--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
+
     <h1>About the Aircraft Collector</h1>
     <hr>
     <p>A place to gather your favorite aircraft</p>
+
 {% endblock %}
