--- a/main_app/templates/aircraft/detail.html
+++ b/main_app/templates/aircraft/detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
+
 <h1>Aircraft Details</h1>
 <div class="row">
     <div class="col s6">
@@ -25,8 +26,15 @@
                     <a href="{% url 'aircraft_delete' aircraft.id %}">Decommision</a>
                 </div>      
             </div>
-          </div>
+        </div>
+        <form action="{% url 'add_photo' aircraft.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+            {% csrf_token %}
+            <input type="file" name="photo-file">
+            
+            <button type="submit" class="btn">Upload Photo</button>
+        </form>
     </div>
+
     <div class="col s6">
         <form action="{% url 'add_maintain' aircraft.id %}" method="POST">
             {% csrf_token %}
@@ -52,7 +60,14 @@
             {% endfor %}
           </tbody>
         </table>
-      </div>    
+    </div>
+    <div class="col s12">
+        {% for photo in aircraft.photo_set.all %}
+            <img class="responsive-img card-panel" src="{{photo.url}}">
+        {% empty %}
+            <div class="card-panel center-align orange-text">No Photos Uploaded</div>
+        {% endfor %}
+    </div>    
 </div>
 
 <hr>
@@ -79,6 +94,7 @@
       <h5>No airbases</h5>
     {% endif %}
   </div>
+
   <div class="col s6">
     <h3>Available Airbases</h3>
     {% if airbases.count %}
