--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Aircraft Collector</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
@@ -32,7 +32,7 @@
     {% block content %}
     {% endblock %}
   </main>
-  <footer class="page-footer #3949ab indigo darken-1">
+  <footer class="page-footer indigo darken-1">
     <div class="container">
       <div class="row">
         <div class="right">All Rights Reserved, &copy; 2021 Aircraft Collector &nbsp; All information sourced from Wikipedia</div>
